# codex-xrays

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  codexrays.py  pyproject.toml  streamviz.py
.github/workflows/: ci.yml  release.yml
tests/: test_core.py  test_follow.py  test_json_pretty.py  test_pretty.py
